# remixx

./: .gitignore  Makefile  README.md  model_card.md  reflection.md
backend/: .env.example  pyproject.toml
backend/app/: agent.py  db.py  guardrails.py  intent.py  llm.py  main.py  personas.py  rag.py  reranker.py
backend/data/: catalog.csv  index_meta.json
backend/eval/: golden_set.json  run_eval.py
backend/scripts/: build_index.py  generate_vibes.py  sample_catalog.py
backend/tests/: test_agent.py  test_api_smoke.py  test_critique_parse.py  test_db.py  test_guardrails.py  test_intent.py  test_llm.py  test_personas.py  test_rag.py  test_rag_fusion.py  test_reranker.py
docs/plans/: INDEX.md
docs/plans/architecture/: diagram.mmd  remixx.md
docs/plans/implementations/: 2026-04-27-remixx-build.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/playlist/: page.tsx
frontend/app/taste/: page.tsx
frontend/components/: AlbumRow.tsx  Hero.tsx  NowPlayingBar.tsx  PicksTable.tsx  Sidebar.tsx  SidebarNav.tsx
frontend/components/chat/: AgentTrace.tsx  MessageInput.tsx  MessageList.tsx  PersonaSelector.tsx
frontend/components/player/: PlayerProvider.tsx
frontend/components/playlist/: NarrativeArc.tsx  TrackList.tsx
frontend/components/taste/: ProfileOutput.tsx  SongInputGrid.tsx
frontend/lib/: api.ts  featured.ts
